--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <section id="hero">
       <!-- Flex Container -->
       <div
-        class="container flex flex-col-reverse md:flex-row items-center px-6 lg:p-12 mx-auto mt-10 space-y-0 md:space-y-0"
+        class="container flex flex-col-reverse md:flex-row justify-center px-6 lg:p-12 mx-auto mt-10 space-y-0 md:space-y-0"
       >
         <!-- left item -->
         <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
@@ -176,6 +176,86 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonial -->
+    <section id="testimonials">
+      <div class="container mx-w-6xl px-5 mx-auto mt-32 text-center">
+        <!-- heading -->
+        <h2 class="text-4xl font-bold text-center">What they’ve said</h2>
+        <!-- testimonial container -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-16"
+        >
+          <!-- testimonial one -->
+          <div
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray"
+          >
+            <img
+              src="../images/avatar-anisha.png"
+              alt="image"
+              class="w-16 -mt-14"
+            />
+            <h5 class="text-lg font-bold">Anisha Li</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              “Manage has supercharged our team’s workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated.”
+            </p>
+          </div>
+          <div
+            class="flex flex-col items-center p-6 space-y-4 rounded-lg bg-veryLightGray"
+          >
+            <img
+              src="../images/avatar-richard.png"
+              alt="image"
+              class="w-16 -mt-14"
+            />
+            <h5 class="text-lg font-bold">Richard Watts</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              “Manage allows us to provide structure and process. It keeps us
+              organized and focused. I can’t stop recommending them to everyone
+              I talk to!”
+            </p>
+          </div>
+          <div
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray"
+          >
+            <img
+              src="../images/avatar-ali.png"
+              alt="image"
+              class="w-16 -mt-14"
+            />
+            <h5 class="text-lg font-bold">Ali Bravo</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              “We have been able to cancel so many other subscriptions since
+              using Manage. There is no more cross-channel confusion and
+              everyone is much more focused.”
+            </p>
+          </div>
+          <div
+            class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray"
+          >
+            <img
+              src="../images/avatar-shanai.png"
+              alt="image"
+              class="w-16 -mt-14"
+            />
+            <h5 class="text-lg font-bold">Shanai Gough</h5>
+            <p class="text-sm text-darkGrayishBlue">
+              y’ve said “Their software allows us to track, manage and
+              collaborate on our projects from anywhere. It keeps the whole team
+              in-sync without being intrusive.”
+            </p>
+          </div>
+        </div>
+        <div class="my-16">
+          <a
+            href=""
+            class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full hover:bg-brightRedLight"
+            >Get Started</a
+          >
         </div>
       </div>
     </section>
