--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
     </section>
     <!-- Testimonial -->
     <section id="testimonials">
-      <div class="container mx-w-6xl px-5 mx-auto mt-32 text-center">
+      <div class="container mx-w-6xl lg:px-12 md:px-8 px-6 mx-auto mt-32 text-center">
         <!-- heading -->
         <h2 class="text-4xl font-bold text-center">What they’ve said</h2>
         <!-- testimonial container -->
@@ -263,7 +263,7 @@
     <section id="CTA" class="bg-brightRed">
       <!-- flex container -->
       <div
-        class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0"
+        class="container flex flex-col items-center justify-between lg:px-12 md:px-8 px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0"
       >
         <h2
           class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left"
@@ -280,5 +280,76 @@
       </div>
     </section>
     <!-- footer -->
+    <footer class="bg-veryDarkBlue">
+      <!-- main flex container -->
+      <div
+        class="container flex flex-col-reverse justify-between lg:px-12 md:px-8 px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0"
+      >
+        <!-- logo and social link -->
+        <div
+          class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start"
+        >
+          <div class="mx-auto my-6 text-center text-white md:hidden"></div>
+
+          <!-- logo -->
+          <div>
+            <img src="../images/logo.svg" class="lg:h-8 md:h-6" alt="" />
+          </div>
+          <!-- social links -->
+          <div class="flex justify-center space-x-4">
+            <a href="#">
+              <img src="../images/icon-facebook.svg" alt="" class="lg:h-8 md:h-6" />
+            </a>
+            <a href="#">
+              <img src="../images/icon-instagram.svg" alt="" class="lg:h-8 md:h-6" />
+            </a>
+            <a href="#">
+              <img src="../images/icon-pinterest.svg" alt="" class="lg:h-8 md:h-6" />
+            </a>
+            <a href="#">
+              <img src="../images/icon-twitter.svg" alt="" class="lg:h-8 md:h-6" />
+            </a>
+            <a href="#">
+              <img src="../images/icon-youtube.svg" alt="" class="lg:h-8 md:h-6" />
+            </a>
+          </div>
+        </div>
+        <!-- list container -->
+        <div class="flex justify-around space-x-30 md:w-1/3">
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="" class="hover:text-brightRed">Home</a>
+            <a href="" class="hover:text-brightRed">Pricing</a>
+            <a href="" class="hover:text-brightRed">Products</a>
+            <a href="" class="hover:text-brightRed">About Us</a>
+          </div>
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="" class="hover:text-brightRed">Careers</a>
+            <a href="" class="hover:text-brightRed">Community</a>
+            <a href="" class="hover:text-brightRed"> Privacy Policy</a>
+          </div>
+        </div>
+        <!-- input container -->
+        <div class="flex flex-col justify-between">
+          <form action="">
+            <div class="flex space-x-3">
+              <input
+                type="text"
+                class="flex-1 px-4 rounded-full focus:outline-none"
+                placeholder="Updates in your inbox…"
+              />
+              <button
+                class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none"
+              >
+                Go
+              </button>
+            </div>
+          </form>
+          <!-- copy write -->
+          <div class="hidden md:block text-white">
+            Copyright &copy; 2025. All Rights Reserved
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
