--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,28 @@
           class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full hover:bg-brightRedLight"
           >Get Started</a
         >
+        <!-- hamburger Icon -->
+        <button
+          id="menu-btn"
+          class="block hamburger md:hidden focus:outline-none"
+        >
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+      <!-- mobile  -->
+      <div class="md:hidden">
+        <div
+          id="menu"
+          class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md"
+        >
+          <a href="">Pricing</a>
+          <a href="">Product</a>
+          <a href="">About Us</a>
+          <a href="">Careers</a>
+          <a href="">Community</a>
+        </div>
       </div>
     </nav>
     <!-- Hero Section -->
@@ -181,7 +203,9 @@
     </section>
     <!-- Testimonial -->
     <section id="testimonials">
-      <div class="container mx-w-6xl lg:px-12 md:px-8 px-6 mx-auto mt-32 text-center">
+      <div
+        class="container mx-w-6xl lg:px-12 md:px-8 px-6 mx-auto mt-32 text-center"
+      >
         <!-- heading -->
         <h2 class="text-4xl font-bold text-center">What they’ve said</h2>
         <!-- testimonial container -->
@@ -298,19 +322,39 @@
           <!-- social links -->
           <div class="flex justify-center space-x-4">
             <a href="#">
-              <img src="../images/icon-facebook.svg" alt="" class="lg:h-8 md:h-6" />
+              <img
+                src="../images/icon-facebook.svg"
+                alt=""
+                class="lg:h-8 md:h-6"
+              />
             </a>
             <a href="#">
-              <img src="../images/icon-instagram.svg" alt="" class="lg:h-8 md:h-6" />
+              <img
+                src="../images/icon-instagram.svg"
+                alt=""
+                class="lg:h-8 md:h-6"
+              />
             </a>
             <a href="#">
-              <img src="../images/icon-pinterest.svg" alt="" class="lg:h-8 md:h-6" />
+              <img
+                src="../images/icon-pinterest.svg"
+                alt=""
+                class="lg:h-8 md:h-6"
+              />
             </a>
             <a href="#">
-              <img src="../images/icon-twitter.svg" alt="" class="lg:h-8 md:h-6" />
+              <img
+                src="../images/icon-twitter.svg"
+                alt=""
+                class="lg:h-8 md:h-6"
+              />
             </a>
             <a href="#">
-              <img src="../images/icon-youtube.svg" alt="" class="lg:h-8 md:h-6" />
+              <img
+                src="../images/icon-youtube.svg"
+                alt=""
+                class="lg:h-8 md:h-6"
+              />
             </a>
           </div>
         </div>
@@ -351,5 +395,6 @@
         </div>
       </div>
     </footer>
+    <script src="../src/main.js" defer></script>
   </body>
 </html>
