Fix asset paths for GitHub Pages

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="flex justify-between items-center">
         <!-- logo -->
         <div class="pt-2">
-          <img src="../images/logo.svg" alt="logo" />
+          <img src="./images/logo.svg" alt="logo" />
         </div>
         <!-- menu Items -->
         <div class="hidden md:flex space-x-4 lg:space-x-8">
@@ -90,7 +90,7 @@
         <!-- image -->
         <div class="md:w-1/2">
           <img
-            src="../images/illustration-intro.svg"
+            src="./images/illustration-intro.svg"
             alt="illustration-intro"
           />
         </div>
@@ -217,7 +217,7 @@
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray"
           >
             <img
-              src="../images/avatar-anisha.png"
+              src="./images/avatar-anisha.png"
               alt="image"
               class="w-16 -mt-14"
             />
@@ -232,7 +232,7 @@
             class="flex flex-col items-center p-6 space-y-4 rounded-lg bg-veryLightGray"
           >
             <img
-              src="../images/avatar-richard.png"
+              src="./images/avatar-richard.png"
               alt="image"
               class="w-16 -mt-14"
             />
@@ -247,7 +247,7 @@
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray"
           >
             <img
-              src="../images/avatar-ali.png"
+              src="./images/avatar-ali.png"
               alt="image"
               class="w-16 -mt-14"
             />
@@ -262,7 +262,7 @@
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray"
           >
             <img
-              src="../images/avatar-shanai.png"
+              src="./images/avatar-shanai.png"
               alt="image"
               class="w-16 -mt-14"
             />
@@ -317,41 +317,41 @@
 
           <!-- logo -->
           <div>
-            <img src="../images/logo.svg" class="lg:h-8 md:h-6" alt="" />
+            <img src="./images/logo.svg" class="lg:h-8 md:h-6" alt="" />
           </div>
           <!-- social links -->
           <div class="flex justify-center space-x-4">
             <a href="#">
               <img
-                src="../images/icon-facebook.svg"
+                src="./images/icon-facebook.svg"
                 alt=""
                 class="lg:h-8 md:h-6"
               />
             </a>
             <a href="#">
               <img
-                src="../images/icon-instagram.svg"
+                src="./images/icon-instagram.svg"
                 alt=""
                 class="lg:h-8 md:h-6"
               />
             </a>
             <a href="#">
               <img
-                src="../images/icon-pinterest.svg"
+                src="./images/icon-pinterest.svg"
                 alt=""
                 class="lg:h-8 md:h-6"
               />
             </a>
             <a href="#">
               <img
-                src="../images/icon-twitter.svg"
+                src="./images/icon-twitter.svg"
                 alt=""
                 class="lg:h-8 md:h-6"
               />
             </a>
             <a href="#">
               <img
-                src="../images/icon-youtube.svg"
+                src="./images/icon-youtube.svg"
                 alt=""
                 class="lg:h-8 md:h-6"
               />
@@ -395,6 +395,6 @@
         </div>
       </div>
     </footer>
-    <script src="../src/main.js" defer></script>
+    <script src="./src/main.js" defer></script>
   </body>
 </html>
