--- a/index.html
+++ b/index.html
@@ -395,6 +395,6 @@
         </div>
       </div>
     </footer>
-    <script src="./src/main.js" defer></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
